[package]
name = "cyberapi-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc.2"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.1", features = ["full"] }
tower-http = { version = "0.3.4", features = ["fs",  "compression-gzip"] }
tracing = "0.1.36"
tracing-subscriber = { version ="0.3.15", features = ["env-filter"] }
windows = "0.41.0"
