[package]
name = "cyberapi"
version = "0.1.7"
description = "API tool based on tauri, it is smaller and faster."
authors = ["tree.xie@outlook.com"]
license = "Apache License 2.0"
repository = "https://github.com/vicanso/cyberapi"
default-run = "cyberapi"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["app-hide", "clipboard-all", "dialog-all", "fs-exists", "fs-read-dir", "fs-read-file", "os-all", "path-all", "process-all", "window-all"] }
once_cell = "1.12.0"
chrono = "0.4"
strum = "0.24"
strum_macros = "0.24"
hyper = { version = "0.14.19", features = ["client", "http1"] }
base64 = "0.20.0"
cookie_store = "0.16.1"
url = "2.2.2"
time = "0.3.13"
hyper-timeout = "0.4.1"
windows = "0.41.0"
libflate = "1.2.0"
brotli-decompressor = "2.3.2"
sea-orm = { version = "0.9.2", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-json"] }
zip = { version = "0.6.2", features = ["deflate"] }
tokio = { version = "1.21.2", features = ["parking_lot"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
hyper-rustls = "0.23.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true 
# 如果设置为true会导致short cut不可用
lto = "thin"
opt-level = "z"
