[package]
name = "cyberapi"
version = "0.1.13"
description = "API tool based on tauri, it is smaller and faster."
authors = ["tree.xie@outlook.com"]
license = "Apache License 2.0"
repository = "https://github.com/vicanso/cyberapi"
default-run = "cyberapi"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.1", features = ["app-hide", "clipboard-all", "dialog-all", "fs-exists", "fs-read-dir", "fs-read-file", "fs-write-file", "os-all", "path-all", "process-all", "window-all"] }
once_cell = "1.18.0"
chrono = "0.4"
strum = "0.24"
strum_macros = "0.24"
hyper = { version = "0.14.27", features = ["client", "http1"] }
base64 = "0.21.2"
cookie_store = "0.16.2"
url = "2.4.0"
time = "0.3.13"
hyper-timeout = "0.4.1"
windows = "0.48.0"
libflate = "1.3.0"
brotli-decompressor = "2.3.4"
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-json"] }
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
tokio = { version = "1.29.1", features = ["parking_lot"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
hyper-rustls = "0.24.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
# Strip expensive panic clean-up logic
panic = "abort"
# Compile crates one after another so the compiler can optimize better
codegen-units = 1 
strip = true 
# 如果设置为true会导致short cut不可用
lto = "thin"
opt-level = "z"
