[package]
name = "cyberapi"
version = "0.1.18"
description = "API tool based on tauri, it is smaller and faster."
authors = ["tree.xie@outlook.com"]
license = "Apache License 2.0"
repository = "https://github.com/vicanso/cyberapi"
default-run = "cyberapi"
edition = "2021"
rust-version = "1.64"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
base64 = "0.21.5"
brotli-decompressor = "2.5.1"
chrono = "0.4.31"
cookie = "0.18.0"
cookie_store = "0.20.0"
hyper = { version = "0.14.27", features = ["client", "http1"] }
hyper-rustls = "0.24.1"
hyper-timeout = "0.4.1"
libflate = "2.0.0"
once_cell = "1.18.0"
sea-orm = { version = "0.12.9", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
strum = "0.25.0"
strum_macros = "0.25.1"
tauri = { version = "1.5.3", features = ["app-hide", "clipboard-all", "dialog-all", "fs-exists", "fs-read-dir", "fs-read-file", "fs-write-file", "os-all", "path-all", "process-all", "window-all"] }
time = "0.3.30"
tokio = { version = "1.35.0", features = ["parking_lot"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.4.0"
windows = "0.48.0"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Strip expensive panic clean-up logic
panic = "abort"
# Compile crates one after another so the compiler can optimize better
codegen-units = 1 
strip = true 
# 如果设置为true会导致short cut不可用
lto = "thin"
opt-level = "z"
